[package]
name = "combi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
scraper = "0.19.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres"] }
tokio = { version = "1.36.0", features = ["full"] }
