[package]
name = "combi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
iter_tools = "0.14.0"
lazy_static = "1.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.10.3"
reqwest = "0.11.27"
scraper = "0.19.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
